feat: finish team manager route
